# GAW-Engine

./: .gitignore  CMakeLists.txt  GAW-Engine.cpp  GAW-Engine.h  demo_frag.glsl
configs/: game_defualts.json
glsl_scripts/: demo_vertex.glsl
includes/GAW_RenderMain/: GAW-Engine.h
includes/GAW_RenderWindow/: GAW-EngineRenderWindow.h
includes/GAW_ShaderStuff/: CMakeLists.txt
src/: CMakeLists.txt
src/GAW_MathStuff/: CMakeLists.txt
src/GAW_RenderMain/: GAW-Engine.cpp
src/GAW_RenderWindow/: CMakeLists.txt  GAW-EngineRenderWindow.cpp
